# project_generator

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  __init__.py  builder.py  coide.py  coide_definitions.py  default_settings.py  eclipse.py  export.py  export_generator.py  exporter.py  gccarm.py  iar.py  iar_definitions.py  iar_mcu_definitions.py  ide.py  mkdocs.yml  pypi_readme.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tool.py  user_settings.py  uvision.py  uvision4.py  uvision_definitions.py  uvision_mcu_definitions.py  yaml_parser.py
.github/workflows/: test.yml
docs/: index.md
docs/reference/: projects.md
docs/user-guide/: getting_started.md
project_generator/: __init__.py  __main__.py  build.py  builder.py  clean.py  export.py  flash.py  generate.py  generator.py  import_command.py  init.py  init_yaml.py  list_projects.py  load.py  main.py  project.py  project.py.orig  run.py  settings.py  targets.py  tool.py  tools_supported.py  update.py  util.py  workspace.py  workspace.py.orig  yaml_parser.py
project_generator/builders/: builder.py  gccarm.py  iar.py  uvision.py
project_generator/commands/: __init__.py  build.py  clean.py  export.py  flash.py  generate.py  import_command.py  init.py  list_projects.py  update.py
project_generator/exporters/: __init__.py  board_definitions.py  coide.py  coide_definitions.py  eclipse.py  exporter.py  gdb.py  (+7 more)
src/: export.py
templates/: coide.coproj.tmpl  eclipse.project.tmpl  eclipse_makefile.cproject.tmpl  gcc_arm.tmpl  gccarm_k20dx128.tmpl  iar.ewp.tmpl  makefile_gcc.tmpl  uvision4.uvopt.tmpl  uvision4.uvproj.tmpl  uvision4_flash_algo.uvopt.tmpl  uvision4_flash_algo.uvproj.tmpl  uvision4_k20dx128.uvopt.tmpl  uvision4_k20dx128.uvproj.tmpl
tests/: requirements.txt  setup.sh  test_exporter.py  test_generator.py  test_pgenworkspace.py  test_project.py  test_projecttemplate.py  test_projectworkspace.py  test_settings.py  test_targets.py  test_tools_supported.py  test_util.py  test_workspace.py
(+81 files in other folders)
