[metadata]
name = project_generator
description = Project generators for various embedded tools (IDE). IAR, uVision, Makefile and many more in the roadmap!
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Martin Kojtal
maintainer_email = c0170@rocketmail.com
url = https://github.com/project-generator/project_generator
keywords = c cpp project generator embedded
license = Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: C
    Programming Language :: C++
    Topic :: Software Development
    Topic :: Software Development :: Embedded Systems
project_urls =
    Home = https://github.com/project-generator/project_generator
    Issues = https://github.com/project-generator/project_generator/issues
    Documentation = https://github.com/project-generator/project_generator/wiki

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    pyyaml>=6.0,<7.0
    Jinja2>=3.0,<4.0
    xmltodict
    project_generator_definitions>=0.2.2,<0.3.0

[options.entry_points]
console_scripts =
    project_generator = project_generator.__main__:main
    progen = project_generator.__main__:main

[bdist_wheel]
universal = 1
